Added style for the header and banner (also included image in the banner)

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
     </div>
     <div id="banner">
         <div id="description">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title.  
-                It's a smaller font and the color is lower contrast</p>
-                <button>Sign Up</button>
+            <h1 id="banner-header">Welcome to Crystal Coding Bootcamp</h1>
+            <p class="banner-text">We are a fully remote coding bootcamp that offers both full-time and part-time courses for a variety of languages and areas.  Please visit our courses page for more info. or use the button below to sign up to our mailing list.</p>
+                <button class="banner-button">Sign Up</button>
         </div>
-        <div id="image">
-            <p>this is a placeholder for an image</p>
+        <div class="image">
+            <img src="comp.jpg" id="comp-image">
         </div>
     </div>
 
