Added style and images for main section

--- a/index.html
+++ b/index.html
@@ -28,16 +28,24 @@
     </div>
 
     <div id="main-body">
-        <h1>Some random information.</h1>
+        <h1 id="info-header">Our Courses</h1>
         <div id="image-holder">
-            <p class="rounded-corners"></p>
-            <p>this is some subtext under an illustration or image</p>
-            <p class="rounded-corners"></p>
-            <p>this is some subtext under an illustration or image</p>
-            <p class="rounded-corners"></p>
-            <p>this is some subtext under an illustration or image</p>
-            <p class="rounded-corners"></p>
-            <p>this is some subtext under an illustration or image</p>
+            <div class="image">
+                <img src="html.jpg" class="course-image">
+                <p>HTML & CSS</p>
+            </div>
+            <div class="image">
+                <img src="javascript.jpg" class="course-image">
+                <p>Javascript</p>
+            </div>
+            <div class="image">
+                <img src="machine.jpg" class="course-image">
+                <p>Machine Learning</p>
+            </div>
+            <div class="image">
+                <img src="laptop.jpg" class="course-image">
+                <p>And more!</p>
+            </div>
         </div>
 
         <div id="quote">
