Added style to the quote section

--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
                 <p>And more!</p>
             </div>
         </div>
-
+    </div>
         <div id="quote">
-            <p>This is an inspiring quote, or a testimonial from a customer.  
-                Maybe it's just filling up space, or maybe people will actually read it.
-            Who knows? All I know is that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
+            <p class="quote-text">“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.” </p>
+            <p class="quote-by">-Martin Fowler</p>
         </div>
 
         <div id="sign-up">
@@ -60,7 +58,7 @@
             <p>Sign up for our product by clicking that button right over there!</p>
             <button>Sign up</button>
         </div>
-    </div>
+    
 
     <footer>
         <p>Copyright The Odin Project 2021</p>
