Added style to the call to action section

--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
     </div>
         <div id="quote">
             <p class="quote-text">“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.” </p>
-            <p class="quote-by">-Martin Fowler</p>
+            <p class="quote-by bold">-Martin Fowler</p>
         </div>
 
         <div id="sign-up">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+            <div id="sign-uptext">
+                <p class="bold">Call to action! It's time!</p>
+                <p>Sign up for our mailing list by clicking that button right over there!</p>
+            </div>
+            <button  class="banner-button border-button">Sign up</button>
         </div>
     
 
