Fix for flex on banner

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
             <a href="#">Contact Us</a>
         </div>
     </div>
-    <div id="banner">
-        <div id="description">
-            <h1 id="banner-header">Welcome to Crystal Coding Bootcamp</h1>
-            <p class="banner-text">We are a fully remote coding bootcamp that offers both full-time and part-time courses for a variety of languages and areas.  Please visit our courses page for more info. or use the button below to sign up to our mailing list.</p>
-                <button class="banner-button">Sign Up</button>
-        </div>
-        <div class="image">
-            <img src="comp.jpg" id="comp-image">
+    <div id="fullbanner-background">
+        <div id="banner">
+            <div id="description">
+                <h1 id="banner-header">Welcome to Crystal Coding Bootcamp</h1>
+                <p class="banner-text">We are a fully remote coding bootcamp that offers both full-time and part-time courses for a variety of languages and areas.  Please visit our courses page for more info. or use the button below to sign up to our mailing list.</p>
+                    <button class="banner-button">Sign Up</button>
+            </div>
+            <div class="image">
+                <img src="comp.jpg" id="comp-image">
+            </div>
         </div>
     </div>
 
